<!-- Copyright [yyyy] [name of copyright owner] Licensed under the Apache 
	License, Version 2.0 (the "License"); you may not use this file except in 
	compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.alfresco.activiti</groupId>
	<artifactId>aps-project</artifactId>
	<version>1.0.1</version>
	<packaging>jar</packaging>
	<name>Alfresco Process Services - SDK Project</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<profiles>
	
		<profile>
			<id>aps1.9</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>

			<properties>
				<!-- APS 1.9 -->
				<aps.version>1.9.0.5</aps.version>
				<opencsv.version>3.7</opencsv.version>
				<jackson.version>2.9.5</jackson.version>
				<bcprov.version>1.59</bcprov.version>
				<activiti.version>5.22.0.7</activiti.version>
				<spring.version>4.3.14.RELEASE</spring.version>
				<spring-boot.version>1.5.10.RELEASE</spring-boot.version>
				<spring-security.version>4.2.4.RELEASE</spring-security.version>
				<elasticsearch.version>1.7.3</elasticsearch.version>
				<elasticsearch-rest-client.version>5.6.1</elasticsearch-rest-client.version>
				<hibernate.version>4.2.16.Final</hibernate.version>
			</properties>

		</profile>

		<profile>
			<id>aps1.10</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>

			<properties>
				<!-- APS 1.10 -->
				<aps.version>1.10.0</aps.version>
				<opencsv.version>3.7</opencsv.version>
				<jackson.version>2.9.8</jackson.version>
				<bcprov.version>1.62</bcprov.version>
				<activiti.version>5.23.0.0</activiti.version>
				<spring.version>4.3.20.RELEASE</spring.version>
				<spring-boot.version>1.5.21.RELEASE</spring-boot.version>
				<spring-security.version>4.2.9.RELEASE</spring-security.version>
				<elasticsearch.version>7.3.1</elasticsearch.version>
				<elasticsearch-rest-client.version>7.3.1</elasticsearch-rest-client.version>
				<hibernate.version>4.2.16.Final</hibernate.version>
			</properties>

		</profile>

	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk15on</artifactId>
				<version>${bcprov.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>${jackson.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>

			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-bom</artifactId>
				<version>${spring-security.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.directory.server</groupId>
				<artifactId>apacheds-core</artifactId>
				<version>${apache-directory.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.directory.server</groupId>
				<artifactId>apacheds-protocol-ldap</artifactId>
				<version>${apache-directory.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.directory.shared</groupId>
				<artifactId>shared-ldap</artifactId>
				<version>${apache-directory-ldap.version}</version>
			</dependency>
			<dependency>
				<groupId>org.elasticsearch</groupId>
				<artifactId>elasticsearch</artifactId>
				<version>${elasticsearch.version}</version>
			</dependency>
			<dependency>
				<groupId>org.elasticsearch.client</groupId>
				<artifactId>elasticsearch-rest-client</artifactId>
				<version>${elasticsearch-rest-client.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-entitymanager</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.activiti</groupId>
			<artifactId>activiti-app-logic</artifactId>
			<version>${aps.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.activiti</groupId>
			<artifactId>activiti-app</artifactId>
			<version>${aps.version}</version>
			<scope>test</scope>
			<classifier>classes</classifier>
		</dependency>
		<dependency>
			<groupId>com.activiti</groupId>
			<artifactId>activiti-spring</artifactId>
			<version>${activiti.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.activiti</groupId>
			<artifactId>activiti-engine</artifactId>
			<version>${activiti.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>${opencsv.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<configuration>
							<descriptors>
								<descriptor>src/main/resources/assembly/assembly.xml</descriptor>
							</descriptors>
							<!-- if you have special character issues, this is an option to play 
								with. not required in most cases -->
							<!-- <archiverConfig> <encoding>UTF-8</encoding> </archiverConfig> -->
						</configuration>
						<id>create-distribution</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>alfresco-artifacts-repository</id>
			<name>Alfresco EE releases</name>
			<url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-enterprise-releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>